@@ -12,6 +12,7 @@ repositories {
 dependencies {
     compile 'log4j:log4j:1.2.17'
     compile 'org.javassist:javassist:3.15.0-GA'
+    compile 'commons-io:commons-io:2.4'
 }
 
 
@@ -58,8 +59,9 @@ task test4 (dependsOn: ['build', 'cleanTmp']) << {
     def command =
             """
     java
+	-Xms10m -Xmx10m -XX:PermSize=10M -XX:MaxPermSize=10M
     -XX:+HeapDumpOnOutOfMemoryError
-    -cp ${jar.archivePath}
+    -cp ${jar.archivePath};${findPath('commons-io')}
     by.rudko.memory.Test4_PermGenError
     """
     execute command
